assert function family

--- a/doc/RELEASE-NOTES-v1.1
+++ b/doc/RELEASE-NOTES-v1.1
@@ -1,4 +1,15 @@
 QML Logging v1.1 RELEASE NOTES
 -------------------------------
 
- * Use Easylogging++ 9.63
+===============================
+=        IMPROVEMENTS         =
+===============================
+
+ - Use Easylogging++ 9.63
+
+===============================
+=        NEW FEATURES         =
+===============================
+
+ - `assert(.., ..)` function family
+
