timeCheck does not require id

--- a/doc/RELEASE-NOTES-v1.1
+++ b/doc/RELEASE-NOTES-v1.1
@@ -6,6 +6,7 @@ QML Logging v1.1 RELEASE NOTES
 ===============================
 
  - Use Easylogging++ 9.64
+ - `timeCheck` does not require `checkpointId`. It's optional
 
 ===============================
 =        NEW FEATURES         =
