--- a/doc/RELEASE-NOTES-v1.2
+++ b/doc/RELEASE-NOTES-v1.2
@@ -5,6 +5,13 @@ Release type: Minor
 API changes: No
 
 ==========================
+=     IMPROVEMENTS       =
+==========================
+
+ - Uses `qml` logger by default - can be changed from `registerNew` function
+ - Ability to access `QMLLogging` instance pointer 
+
+==========================
 =         NOTES          =
 ==========================
 
