--- a/doc/RELEASE-NOTES-v1.2
+++ b/doc/RELEASE-NOTES-v1.2
@@ -8,6 +8,7 @@ API changes: No
 =     IMPROVEMENTS       =
 ==========================
 
+ - Use Easylogging++ v9.66 because of bug fix
  - Uses `qml` logger by default - can be changed from `registerNew` function
 
 ==========================
