--- a/doc/RELEASE-NOTES-v1.2
+++ b/doc/RELEASE-NOTES-v1.2
@@ -5,6 +5,12 @@ Release type: Minor
 API changes: No
 
 ==========================
+=       BUG FIXES        =
+==========================
+
+ - Fixed Visual C++ build for Qt quick
+
+==========================
 =     IMPROVEMENTS       =
 ==========================
 
