Log to log prop

--- a/doc/RELEASE-NOTES-v1.2
+++ b/doc/RELEASE-NOTES-v1.2
@@ -10,7 +10,7 @@ API changes: Yes
 
  - Main class renamed to `QmlLogging`
  - Root context required for `registerNew`
- - Context name cannot be changed and functions accessible using context `Log`
+ - Context name cannot be changed and functions accessible using context `log`
  - Uses `qml` logger by default - can be changed from `registerNew` function
 
 ==========================
